1、新功能：调整阵型功能
2、新功能：调整阵型解锁功能
3、新功能：更新英雄数据

[seaking_server_1.0.0.1 2013-01-18 张春生]
1、新功能：调整阵型功能
2、新功能：增加阵型升级数据

[seaking_server_1.0.0.1 2013-01-19 张春生]
1、新功能：阵法增加升级消耗逻辑

[seaking_server_1.0.0.1 2013-01-20 张春生]
1、新功能：增加检查所有角色升级资质消耗数据功能

[seaking_server_1.0.0.1 2013-02-08 张春生]
1、新功能：增加祭坛功能

[seaking_server_1.0.0.1 2013-02-09 张春生]
1、新功能：增加收割固化技能
2、新功能：增加冰霜之心技能

[seaking_server_1.0.0.1 2013-02-10 张春生]
1、新功能：增加绝对守护技能
2、新功能：增加破釜沉舟技能
3、新功能：增加英雄图鉴、魂魄背包、祭坛数据等功能

[seaking_server_1.0.0.1 2013-02-11 张春生]
1、新功能：增加魂魄背包功能
2、新功能：增加召唤英雄功能

[seaking_server_1.0.0.1 2013-02-12 张春生]
1、新功能：调整召唤英雄功能，增加元宝消耗
2、新功能：增加同归于尽技能
3、新功能：增加格挡高手技能
4、新功能：增加君王意志技能

[seaking_server_1.0.0.1 2013-02-13 张春生]
1、新功能：增加星级属性
2、新功能：增加品质属性
3、新功能：增加融合数据
4、新功能：增加灵魂融合功能

[seaking_server_1.0.0.1 2013-02-14 张春生]
1、新功能：增加伙伴魂魄融合功能

[seaking_server_1.0.0.1 2013-02-15 张春生]
1、新功能：增加祭坛冻结剩余时间

[seaking_server_1.0.0.1 2013-02-17 张春生]
1、新功能：增加兑换数据
2、新功能：增加兑换功能
3、新功能：调整融合功能

[seaking_server_1.0.0.1 2013-02-17 张春生]
1、新功能：召唤返回结果增加侠义值
2、bug：修正召唤返回结果中冻结时间

[seaking_server_1.0.0.1 2013-02-18 张春生]
1、新功能：调整融合功能，传入背包位置

[seaking_server_1.0.0.1 2013-02-19 张春生]
1、新功能：更新道具数据

[seaking_server_1.0.0.1 2013-02-20 张春生]
1、新功能：增加权限力量技能
2、新功能：增加流沙技能
3、新功能：增加致命打击技能

[seaking_server_1.0.0.1 2013-02-21 张春生]
1、新功能：增加狂热技能
2、新功能：增加契机技能
3、新功能：增加月神祝福技能

[seaking_server_1.0.0.1 2013-02-23 张春生]
1、新功能：增加换日技能

[seaking_server_1.0.0.1 2013-02-24 张春生]
1、新功能：增加手段技能

[seaking_server_1.0.0.1 2013-02-25 张春生]
1、新功能：增加朗月技能
2、新功能：增加鲜血屠戮技能
3、新功能：增加禁锢技能
4、新功能：增加狂暴攻击技能

[seaking_server_1.0.0.1 2013-02-26 张春生]
1、新功能：增加报复技能
2、新功能：增加嗜血之种技能
3、新功能：增加绝命编织技能
4、新功能：增加眷顾技能

[seaking_server_1.0.0.1 2013-02-27 张春生]
1、新功能：增加生命置换技能
2、新功能：增加死亡急速技能
3、新功能：增加死亡之触技能
4、新功能：增加腐化技能
5、新功能：战斗接口添加跨域访问
6、bug：修复当前技能循环引用bug

[seaking_server_1.0.0.1 2013-03-03 张春生]
1、新功能：增加自由技能
2、新功能：更新技能数据

[seaking_server_1.0.0.1 2013-03-04 张春生]
1、新功能：增加技能脚本

--备注分类
1、新功能：
2、Bug:
3、需求变更：
4、重构：
5、merge:

--格式：
[seaking_server_1.0.0.1 2013-09-22 张春生]
版本号 日期 提交人
版本号：产品名 版本类型 主版本 辅版本 新功能版本 缺陷版本