@@ -384,3 +384,65 @@ exports.clearPackage = function(req, res) {
         });
     });
 }
+
+/**
+ *
+ * @param req
+ * @param res
+ */
+exports.initTasks = function(req, res) {
+    var msg = req.query;
+    var session = req.session;
+
+    var nickname = msg.nickname;
+    var serverId = region.serverId;
+
+    if(typeof nickname == "undefined" || nickname == "" || nickname == 0) {
+        data = {
+            code: Code.FAIL
+        };
+        utils.send(msg, res, data);
+        return;
+    }
+
+    var data = {};
+    userService.getCharacterInfoByNickname(serverId, nickname, function(err, reply) {
+        if(err || reply == null) {
+            data = {
+                code: Code.FAIL
+            };
+            utils.send(msg, res, data);
+            return;
+        }
+        if(utils.empty(reply)) {
+            data = {
+                code: Code.FAIL
+            };
+            utils.send(msg, res, data);
+            return;
+        }
+
+        var registerType = 0;
+        var loginName = "";
+        var characterId = 0;
+
+        var array = reply.split("_");
+        registerType = array[1].replace("T", "");
+        loginName = array[2];
+        characterId = array[3].replace("C", "");
+
+        userService.getCharacterAllInfo(serverId, registerType, loginName, characterId, function(err, character) {
+            character.curTasksEntity.initTask();
+            async.parallel([
+                function(callback) {
+                    taskService.update(character, character.curTasksEntity.strip(), callback);
+                }
+            ], function(err, reply) {
+                data = {
+                    code: Code.OK
+                };
+                utils.send(msg, res, data);
+            });
+        });
+    });
+}
