@@ -430,6 +430,9 @@
 [seaking_server_1.0.0.1 2013-03-04 张春生]
 1、新功能：增加技能脚本
 
+[seaking_server_1.0.0.1 2013-03-05 张春生]
+1、新功能：增加重置任务功能
+
 --备注分类
 1、新功能：
 2、Bug:
